# rag-technical-manual

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: elena-python.md  ingrid-retrieval.md  tomas-interviewer.md  yuki-eval.md
.claude/skills/decision-logging/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.githooks/: pre-commit
api/: main.py
docs/: decisions.md  documentation.md  requirements.md
docs/documentation/: api.md  eval.md  src.md
docs/superpowers/plans/: 2026-07-13-m0-m1-core-rag.md  2026-07-14-doc-freshness-automation.md  2026-07-14-m2-eval-harness.md  2026-07-14-m3-hybrid-rerank.md  2026-07-14-m4-api.md  2026-07-14-multi-folder-doc-freshness.md  2026-07-17-m5-multimodal.md
docs/superpowers/specs/: 2026-07-14-doc-freshness-automation-design.md
eval/: golden.json  golden.py  judge.py  metrics.py  run.py
eval/results/: 2026-07-14-dense-large.md  2026-07-14-dense-small.md  2026-07-14-hybrid-small.md  2026-07-14-rerank-small.md  2026-07-17-rerank-small-mm.md
src/: chunking.py  config.py  generate.py  hybrid.py  ingest.py  multimodal.py  parse.py  rerank.py  retrieve.py  store.py  textprep.py
tests/: test_api.py  test_chunking.py  test_generate.py  test_golden.py  test_hybrid.py  test_judge.py  test_metrics.py  test_multimodal.py  test_rerank.py  test_run.py  test_textprep.py
