[project]
name = "rag-technical-manual"
version = "0.1.0"
description = "Learning-grade RAG over a technical service manual (LlamaIndex + pgvector + Claude), with an LLM-as-judge eval harness and a single-image multimodal extension."
requires-python = ">=3.12"
dependencies = [
    # RAG framework (retrieval layer)
    "llama-index-core",
    "llama-index-readers-file",
    "llama-index-llms-anthropic",
    "llama-index-embeddings-openai",
    "llama-index-vector-stores-postgres",
    # Model SDKs (direct use: vision-caption + eval judge)
    "anthropic",
    "openai",
    # Postgres + pgvector
    "pgvector",
    "psycopg2-binary",
    "asyncpg",
    "sqlalchemy",
    # API layer
    "fastapi",
    "uvicorn[standard]",
    # Config
    "python-dotenv",
    "pydantic",
    "llama-index-retrievers-bm25>=0.7.1",
    "pymupdf>=1.28.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py312"
